--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -2,7 +2,7 @@
 $main-light: #ffffff;
 $main-dark: #000000;
 // $accent: #ff3411;
-$accent-primary: cadetblue;
+$accent-primary: rgb(95, 158, 160);
 $accent-secondary: #a3a3a3;
 
 /* Mixins */
