--- a/styles/sass/components/_about.scss
+++ b/styles/sass/components/_about.scss
@@ -38,6 +38,11 @@
           flex-basis: 20%;
           max-width: calc(20% - 40px);
         }
+
+        @include tablet-portrait-sm {
+          flex-basis: 33.33333%;
+          max-width: calc(33.33333% - 40px);
+        }
       }
     }
   }
@@ -57,6 +62,12 @@
       flex: 0 0 25%;
       max-width: calc(25% - 40px);
       margin: 0 20px;
+    }
+
+    @include tablet-portrait-sm {
+      display: block;
+      max-width: 100%;
+      margin: 0;
     }
   }
 
@@ -92,6 +103,10 @@
           @include tablet-landscape {
             flex-direction: column;
           }
+
+          @include tablet-portrait-sm {
+            align-items: flex-start;
+          }
         }
 
         a {
@@ -123,6 +138,10 @@
     @include tablet-landscape-sm {
       display: flex;
     }
+
+    @include tablet-portrait-sm {
+      display: block;
+    }
   }
 
   &__languages ul {
@@ -144,6 +163,16 @@
       flex-basis: 50%;
       max-width: calc(50% - 40px);
       margin: 0 20px;
+    }
+  }
+
+  @include tablet-portrait-sm {
+    display: block;
+
+    &__courses {
+      display: block;
+      max-width: 100%;
+      margin: 0;
     }
   }
 }
