--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -46,4 +46,11 @@
   &__circle {
     font-size: 2.5rem;
   }
+
+  @include tablet-portrait-sm {
+    &__contact,
+    &__about {
+      display: none;
+    }
+  }
 }
