--- a/styles/sass/components/_experience.scss
+++ b/styles/sass/components/_experience.scss
@@ -11,7 +11,13 @@
     color: $accent-secondary;
   }
 
-  h2 {
-    margin-bottom: 20px;
+  @include tablet-portrait-sm {
+    &__info {
+      margin-top: 20px;
+    }
+
+    &__date {
+      margin-bottom: 5px;
+    }
   }
 }
