--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -42,14 +42,19 @@
 
         &__title {
           margin-bottom: 30px;
+          align-items: center;
 
-          h3 {
-            font-weight: normal;
-            font-size: 1.5rem;
+          i {
+            display: inline-block;
+            margin-right: 5px;
           }
 
-          .row {
-            align-items: center;
+          h3 {
+            display: inline-block;
+            margin-top: -3px;
+            vertical-align: middle;
+            font-weight: normal;
+            font-size: 1.5rem;
           }
         }
 
@@ -93,5 +98,23 @@
         justify-content: center;
       }
     }
+
+    @include tablet-portrait-sm {
+      &.row {
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        overflow: auto;
+
+        .col-4 {
+          &:last-child {
+            margin-right: 40px;
+          }
+        }
+      }
+    }
+  }
+
+  @include tablet-landscape-sm {
+    min-height: unset;
   }
 }
