--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -6,6 +6,7 @@
   border-radius: 30px;
   text-transform: capitalize;
   cursor: pointer;
+  outline: none;
 
   &__menu {
     height: 50px;
@@ -31,6 +32,12 @@
     transform: translateY(-50%);
     background-color: unset;
     z-index: 10;
+
+    &:hover {
+      .scroll__hint {
+        max-width: 120px;
+      }
+    }
   }
 
   &__contact {
