--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -11,7 +11,7 @@
   }
 
   &__list {
-    display: flex;
+    display: none;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
@@ -24,6 +24,7 @@
 
     &.opacity {
       opacity: 1;
+      display: flex;
     }
   }
 
@@ -31,6 +32,79 @@
     a {
       text-transform: capitalize;
       padding: 10px;
+    }
+
+    &:last-child {
+      display: none;
+    }
+  }
+
+  @include tablet-portrait-sm {
+    padding: 0 20px;
+    width: 100%;
+    left: 0;
+
+    > .row {
+      text-align: right;
+    }
+
+    .row {
+      margin: 0;
+    }
+
+    .col-9,
+    .col-9.row {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      flex: 0 0 100%;
+    }
+
+    .col-9.row {
+      display: inline-block;
+    }
+
+    .col-auto {
+      z-index: 1;
+      position: relative;
+    }
+
+    .btn__menu {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+    &__dropdown {
+      display: block;
+      position: absolute;
+      width: 100%;
+      left: -10px;
+      top: -10px;
+      max-width: calc(100% - 20px);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      border-radius: 30px;
+    }
+
+    &__list {
+      padding: 70px 0 20px;
+      height: auto;
+      align-items: flex-start;
+      text-align: left;
+      background-color: rgba(95, 158, 160, 0.9);
+
+      .col-2 {
+        max-width: 100%;
+        flex-basis: 100%;
+      }
+
+      &.opacity {
+        display: block;
+      }
+    }
+
+    &__item {
+      &:last-child {
+        display: block;
+      }
     }
   }
 }
