--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -3,10 +3,10 @@ $main-light: #ffffff;
 $main-dark: #000000;
 // $accent: #ff3411;
 $accent-primary: rgb(95, 158, 160);
+// $accent-primary: darkslategray;
 $accent-secondary: #a3a3a3;
 
 /* Mixins */
-
 @mixin fontSize($size-value) {
   font-size: ($size-value / 10) * 1rem;
 }
