--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -47,7 +47,7 @@
         width: 100%;
         height: 30%;
         padding: 20px;
-        background-color: rgba(95, 158, 160, 1);
+        background-color: rgb(95, 158, 160);
         transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
         &__title {
