Update h1 on mobile

--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -12,6 +12,11 @@
     font-weight: bold;
     @include fontSize(36);
     font-family: "Poppins", sans-serif;
+
+    @include tablet-portrait-sm {
+      margin: 20px 0 10px;
+      @include fontSize(30);
+    }
   }
 
   h2 {
