--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -36,6 +36,10 @@
 
   &__icons {
     margin: 35px 0 60px;
+
+    @include tablet-portrait-sm {
+      margin: 35px 0;
+    }
   }
 
   &__button {
