Update h1 color, add text-transform prop for h2

--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -19,9 +19,14 @@
     }
   }
 
+  .title-name {
+    color: lightcoral;
+  }
+
   h2 {
     @include fontSize(18);
     font-weight: normal;
+    text-transform: uppercase;
   }
 
   &__image {
