--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -12,9 +12,14 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    transition: all 200ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
 
     &.hide {
       display: none;
+    }
+
+    &:hover {
+      color: rgba(0, 0, 0, 0.5);
     }
   }
 
