--- a/styles/style.css
+++ b/styles/style.css
@@ -376,8 +376,12 @@ button {
   font-size: 2rem;
 }
 
-.fa-chevron-circle-right {
-  font-size: 1.8rem;
+.fa-times {
+  font-size: 2.6rem;
+}
+
+.fa-times:hover {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .fa-download {
@@ -824,10 +828,16 @@ body {
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  -webkit-transition: all 200ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: all 200ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 
 .btn__menu.hide {
   display: none;
+}
+
+.btn__menu:hover {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .btn__resume {
