--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -27,9 +27,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    letter-spacing: 1px;
 
     &:hover {
-      background-color: rgba(95, 158, 160, 0.8);
+      color: rgba(0, 0, 0, 0.5);
     }
   }
 
