--- a/styles/style.css
+++ b/styles/style.css
@@ -850,10 +850,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  letter-spacing: 1px;
 }
 
 .btn__resume:hover {
-  background-color: rgba(95, 158, 160, 0.8);
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .btn__send {
