--- a/styles/style.css
+++ b/styles/style.css
@@ -859,6 +859,14 @@ body {
   color: rgba(0, 0, 0, 0.5);
 }
 
+@media only screen and (max-width: 650px) {
+  .btn__resume.col-6 {
+    -ms-flex-preferred-size: 65%;
+        flex-basis: 65%;
+    max-width: calc(65% - 40px);
+  }
+}
+
 .btn__send {
   margin: 40px 0;
   background-color: #ffffff;
@@ -929,6 +937,7 @@ body {
 
 @media only screen and (max-width: 650px) {
   .header h1 {
+    font-size: 2.6rem;
     margin: 20px 0 10px;
     font-size: 3rem;
   }
@@ -942,6 +951,12 @@ body {
   font-size: 1.8rem;
   font-weight: normal;
   text-transform: uppercase;
+}
+
+@media only screen and (max-width: 650px) {
+  .header h2 {
+    font-size: 1.5rem;
+  }
 }
 
 .header__image.row {
