--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -15,6 +15,7 @@
     font-family: "Poppins", sans-serif;
 
     @include tablet-portrait-sm {
+      @include fontSize(26);
       margin: 20px 0 10px;
       @include fontSize(30);
     }
@@ -28,6 +29,10 @@
     @include fontSize(18);
     font-weight: normal;
     text-transform: uppercase;
+
+    @include tablet-portrait-sm {
+      @include fontSize(15);
+    }
   }
 
   &__image {
