--- a/styles/style.css
+++ b/styles/style.css
@@ -1545,6 +1545,7 @@ body {
 }
 
 .footer {
+  height: 100%;
   color: #ffffff;
   padding: 40px 4%;
   background-color: cadetblue;
@@ -1555,10 +1556,20 @@ body {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   overflow: hidden;
-  height: 100%;
   -webkit-transform: translate3d(-100.5%, 0, 0);
           transform: translate3d(-100.5%, 0, 0);
   z-index: 100;
+}
+
+.footer .row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
 }
 
 .footer h2 {
@@ -1604,4 +1615,11 @@ body {
   .footer .btn__circle {
     display: none;
   }
+}
+
+.footer .copyright {
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  color: rgba(255, 255, 255, 0.8);
+  text-align: center;
 }
