Add a new variable for colour, update styles + add hover state for nav items

--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -3,6 +3,7 @@ $main-light: #ffffff;
 $main-dark: #000000;
 $accent-primary: rgb(95, 158, 160);
 $accent-secondary: #a3a3a3;
+$dark-light: rgba(0, 0, 0, 0.5);
 
 /* Mixins */
 @mixin fontSize($size-value) {
