--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -31,6 +31,10 @@
     a {
       text-transform: capitalize;
       padding: 10px;
+
+      &:hover {
+        color: $dark-light;
+      }
     }
 
     &:last-child {
