--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -31,6 +31,7 @@
     a {
       text-transform: capitalize;
       padding: 10px;
+      transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
       &:hover {
         color: $dark-light;
