--- a/styles/style.css
+++ b/styles/style.css
@@ -588,6 +588,8 @@ body {
 .nav__item a {
   text-transform: capitalize;
   padding: 10px;
+  -webkit-transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .nav__item a:hover {
