--- a/styles/style.css
+++ b/styles/style.css
@@ -1092,21 +1092,34 @@ body {
 
 .about__skills__list .col-2 {
   text-align: center;
+  margin: 20px;
 }
 
-@media only screen and (max-width: 1200px) {
-  .about__skills__list .col-2 {
-    -ms-flex-preferred-size: 20%;
-        flex-basis: 20%;
-    max-width: calc(20% - 40px);
+.about__skills__list .col-2 .fa-universal-access {
+  font-size: 7.5rem;
+  color: lightblue;
+}
+
+@media only screen and (max-width: 650px) {
+  .about__skills__list .col-2 .fa-universal-access {
+    font-size: 8rem;
   }
 }
 
 @media only screen and (max-width: 650px) {
   .about__skills__list .col-2 {
-    -ms-flex-preferred-size: 33.33333%;
-        flex-basis: 33.33333%;
-    max-width: calc(33.33333% - 40px);
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    max-width: calc(30% - 10px);
+    margin: 5px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .about__skills__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
