--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -47,7 +47,7 @@
         width: 100%;
         height: 30%;
         padding: 20px;
-        background-color: rgb(95, 158, 160);
+        background-color: $accent-primary;
         transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
         &__title {
@@ -80,7 +80,7 @@
 
       &:hover .overlay {
         height: 100%;
-        background-color: rgba(95, 158, 160, 0.8);
+        background-color: rgba(43, 60, 81, 0.8);
         opacity: 1;
 
         .overlay__list {
