--- a/styles/style.css
+++ b/styles/style.css
@@ -572,7 +572,7 @@ body {
           align-items: center;
   text-align: center;
   height: 50px;
-  background-color: cadetblue;
+  background-color: #2b3c51;
   border-radius: 30px;
   opacity: 0;
   z-index: 10;
@@ -735,7 +735,7 @@ body {
 }
 
 .btn {
-  background-color: cadetblue;
+  background-color: #2b3c51;
   border: unset;
   height: 40px;
   color: #ffffff;
@@ -1072,7 +1072,7 @@ body {
 .about__personal {
   color: rgba(255, 255, 255, 0.7);
   padding: 40px;
-  background-color: cadetblue;
+  background-color: #2b3c51;
   border-radius: 10px;
   font-size: 1.4rem;
 }
@@ -1336,7 +1336,7 @@ body {
   width: 100%;
   height: 30%;
   padding: 20px;
-  background-color: cadetblue;
+  background-color: #2b3c51;
   -webkit-transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
   transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
@@ -1373,7 +1373,7 @@ body {
 
 .portfolio__list .image__container:hover .overlay {
   height: 100%;
-  background-color: rgba(95, 158, 160, 0.8);
+  background-color: rgba(43, 60, 81, 0.8);
   opacity: 1;
 }
 
@@ -1487,7 +1487,7 @@ body {
   height: 100%;
   color: #ffffff;
   padding: 40px 4%;
-  background-color: cadetblue;
+  background-color: #2b3c51;
   position: absolute;
   top: 0;
   left: 0;
