--- a/styles/sass/components/_scroll-indicator.scss
+++ b/styles/sass/components/_scroll-indicator.scss
@@ -1,3 +1,100 @@
+// .scroll-indicator {
+//   width: 12px;
+//   margin: 0 auto;
+//   position: absolute;
+//   bottom: 40px;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   opacity: 0.5;
+//   &::before,
+//   &::after {
+//     content: "";
+//     display: block;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+
+//   &--left {
+//     bottom: 50px;
+//     left: 29%;
+//     transform: unset;
+//   }
+
+//   &::before {
+//     width: 12px;
+//     height: 12px;
+//     border-radius: 10px;
+//     border: 1px solid #000;
+//     animation: dot 3s infinite ease-in-out;
+//   }
+//   &::after {
+//     width: 7px;
+//     height: 7px;
+//     border-right: 1px solid #000;
+//     border-bottom: 1px solid #000;
+//     transform: rotate(45deg);
+//     animation: arrow 3s infinite ease-in-out;
+//     animation-delay: 0.75s;
+//     opacity: 0.25;
+//   }
+//   & > div {
+//     display: block;
+//     &::before,
+//     &::after {
+//       content: "";
+//       display: block;
+//       margin: 5px auto;
+//       border-radius: 10px;
+//       border: 1px solid #000;
+//       animation: dot 3s infinite ease-in-out;
+//     }
+//     &::before {
+//       width: 8px;
+//       height: 8px;
+//       animation-delay: 0.25s;
+//     }
+//     &::after {
+//       width: 6px;
+//       height: 6px;
+//       animation-delay: 0.5s;
+//     }
+//   }
+
+//   @include tablet-portrait-sm {
+//     bottom: 60px;
+//   }
+// }
+
+// @keyframes dot {
+//   0% {
+//     transform: scale(0.75);
+//     opacity: 0.25;
+//   }
+//   25% {
+//     transform: scale(1);
+//     opacity: 1;
+//   }
+//   100% {
+//     transform: scale(0.75);
+//     opacity: 0.25;
+//   }
+// }
+
+// @keyframes arrow {
+//   0% {
+//     transform: scale(0.75) rotate(45deg);
+//     opacity: 0.25;
+//   }
+//   25% {
+//     transform: scale(1) rotate(45deg);
+//     opacity: 1;
+//   }
+//   100% {
+//     transform: scale(0.75) rotate(45deg);
+//     opacity: 0.25;
+//   }
+// }
+
 .scroll-type1 {
   position: absolute;
   width: 20px;
@@ -8,7 +105,7 @@
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
-  transition: all 0.3s;
+
   &::before {
     display: block;
     content: "";
@@ -45,5 +142,15 @@
       opacity: 0;
       top: 20px;
     }
+  }
+
+  @include tablet-portrait-sm {
+    bottom: 60px;
+  }
+
+  &--left {
+    bottom: 50px;
+    left: 29%;
+    transform: unset;
   }
 }
