--- a/styles/style.css
+++ b/styles/style.css
@@ -676,8 +676,6 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   cursor: pointer;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
 }
 
 .scroll-type1::before {
@@ -732,6 +730,28 @@ body {
     opacity: 0;
     top: 20px;
   }
+}
+
+@media only screen and (max-width: 650px) {
+  .scroll-type1 {
+    bottom: 60px;
+  }
+}
+
+.scroll-type1--left {
+  bottom: 50px;
+  left: 29%;
+  -webkit-transform: unset;
+          transform: unset;
+}
+
+.parent .particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
 }
 
 .btn {
