--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -24,11 +24,13 @@
   }
 
   &__resume {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
     letter-spacing: 1px;
+    z-index: 10;
 
     &:hover {
       color: rgba(0, 0, 0, 0.5);
