--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -8,11 +8,13 @@
   }
 
   h1 {
+    position: relative;
     letter-spacing: 2px;
     margin: 60px 0 10px;
     font-weight: bold;
     @include fontSize(36);
     font-family: "Poppins", sans-serif;
+    z-index: 10;
 
     @include tablet-portrait-sm {
       @include fontSize(26);
@@ -96,4 +98,3 @@
     }
   }
 }
-
