--- a/styles/style.css
+++ b/styles/style.css
@@ -389,6 +389,13 @@ button {
   margin-right: 10px;
 }
 
+.fa-linkedin-in,
+.fa-github,
+.fa-twitter {
+  position: relative;
+  z-index: 10;
+}
+
 .fa-linkedin-in:hover,
 .fa-linkedin-in:focus,
 .fa-github:hover,
@@ -745,13 +752,13 @@ body {
           transform: unset;
 }
 
-.parent .particles-js {
+.particles-js {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -10;
+  z-index: 10;
 }
 
 .btn {
@@ -782,6 +789,7 @@ body {
 }
 
 .btn__resume {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -794,6 +802,7 @@ body {
   -webkit-transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
   transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
   letter-spacing: 1px;
+  z-index: 10;
 }
 
 .btn__resume:hover {
@@ -869,11 +878,13 @@ body {
 }
 
 .header h1 {
+  position: relative;
   letter-spacing: 2px;
   margin: 60px 0 10px;
   font-weight: bold;
   font-size: 3.6rem;
   font-family: "Poppins", sans-serif;
+  z-index: 10;
 }
 
 @media only screen and (max-width: 650px) {
