Update icons position, change colour, add row class

--- a/styles/sass/base/_general.scss
+++ b/styles/sass/base/_general.scss
@@ -110,11 +110,11 @@ button {
   z-index: 10;
 }
 
-.fa-linkedin-in:hover,
-.fa-linkedin-in:focus,
-.fa-github:hover,
-.fa-github:focus,
-.fa-twitter:hover,
-.fa-twitter:focus {
-  color: rgba(0, 0, 0, 0.7);
-}
+// .fa-linkedin-in:hover,
+// .fa-linkedin-in:focus,
+// .fa-github:hover,
+// .fa-github:focus,
+// .fa-twitter:hover,
+// .fa-twitter:focus {
+//   color: rgba(0, 0, 0, 0.7);
+// }
