--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -2,7 +2,7 @@
 $main-light: #ffffff;
 $main-dark: #000000;
 // $accent-primary: rgb(95, 158, 160);
-$accent-primary: #2b3c51;
+$accent-primary: rgb(43, 60, 81);
 $accent-secondary: #a3a3a3;
 $dark-light: rgba(0, 0, 0, 0.5);
 
