--- a/styles/style.css
+++ b/styles/style.css
@@ -396,15 +396,6 @@ button {
   z-index: 10;
 }
 
-.fa-linkedin-in:hover,
-.fa-linkedin-in:focus,
-.fa-github:hover,
-.fa-github:focus,
-.fa-twitter:hover,
-.fa-twitter:focus {
-  color: rgba(0, 0, 0, 0.7);
-}
-
 html {
   font-size: 62.5%;
 }
@@ -784,10 +775,6 @@ body {
   display: none;
 }
 
-.btn__menu:hover {
-  color: rgba(0, 0, 0, 0.5);
-}
-
 .btn__resume {
   position: relative;
   display: -webkit-box;
@@ -803,10 +790,6 @@ body {
   transition: all 150ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
   letter-spacing: 1px;
   z-index: 10;
-}
-
-.btn__resume:hover {
-  color: rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 650px) {
@@ -924,6 +907,12 @@ body {
   margin: 35px 0 60px;
 }
 
+.header__icons.row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media only screen and (max-width: 650px) {
   .header__icons {
     margin: 35px 0;
@@ -936,14 +925,38 @@ body {
           justify-content: center;
 }
 
+.header__list {
+  max-width: 60%;
+}
+
 .header__item {
-  display: inline-block;
+  position: relative;
+  z-index: 10;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #556373;
+  margin: 10px;
+  -webkit-box-shadow: 0px 0px 3px #3c3c51;
+          box-shadow: 0px 0px 3px #3c3c51;
 }
 
 .header__item a {
-  color: #a3a3a3;
-  padding: 0 20px;
+  color: #ffffff;
   font-size: 2.2rem;
+}
+
+.header__item:hover {
+  background-color: #2b3c51;
 }
 
 @media only screen and (max-width: 1200px) {
