Update global font-family

--- a/styles/style.css
+++ b/styles/style.css
@@ -401,7 +401,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.6rem;
   overflow-x: hidden;
 }
