--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   @include fontSize(16);
   overflow-x: hidden;
 }
